--- a/TE11UD1/TE11UD1.html
+++ b/TE11UD1/TE11UD1.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="TE11UD1.css">
     <title>bootstrap</title>
   </head>
   <body>
@@ -17,28 +18,37 @@
         <div class="col-sm-10 h_2" style=" background-color:green;">3</div>
     </div> -->
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 " style=" background-color:rgb(0, 255, 0);">green</div>
+       
+        <div class="row h-5">
+            <div class="col-12 border" style=" background-color:rgb(0, 255, 0);"></div>
         </div>
-        <div class="row">
-            <div class="col-2" style=" background-color:red;">
-                red
+        <div class="row h-90 ">
+            <div class="col-md-2 col-sm-3 border bg-red" >
+                
             </div>
-            <div class="col-10">
-                <div class="row"style=" background-color:pink;">pink</div>
-                <div class="row">
-                    <div class="col"style=" background-color:orange;">orange</div>
-                    <div class="col"style=" background-color:orange;">orange</div>
+            <div class="col-md-10 col-sm-9 " >
+                <div class="row border h-10"style=" background-color:pink;"></div>
+                <div class="row h-50">
+                    <div class="col-md-6 border" style=" background-color:orange;"></div>
+                    <div class="col-md-6 border" style=" background-color:orange;"></div>
                 </div>
-                <div class="row">
-                    <div class="col" style="background-color: blue;">blue</div>
-                    <div class="col" style="background-color: blue;">blue</div>
-                    <div class="col" style="background-color: blue;">blue</div>
-                    <div class="col" style="background-color: blue;">blue</div>
-                    <div class="col" style="background-color: blue;">blue</div>                    
+                <div class="row h-40">
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-4 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>             
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-4 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>
+                    <div class="col-md-2 col-sm-4 col-6 border bg-blue" ></div>                    
                 </div>
             </div>
         </div>        
+        <div class="row h-2">
+            <div class="col-12 border" style="background-color:rgb(0, 255, 0);"></div>
+        </div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
