--- a/TE11UD1/TE11UD1.html
+++ b/TE11UD1/TE11UD1.html
@@ -26,7 +26,7 @@
             <div class="col-md-2 col-sm-3 border bg-red" >
                 
             </div>
-            <div class="col-md-10 col-sm-9 " >
+            <div class="col-md-10 col-sm-9 test" >
                 <div class="row border h-10"style=" background-color:pink;"></div>
                 <div class="row h-50">
                     <div class="col-md-6 border" style=" background-color:orange;"></div>
