terminado esta basura

--- a/TE11UD1/TE11UD1.3.html
+++ b/TE11UD1/TE11UD1.3.html
@@ -21,7 +21,7 @@
             <div class="col-sm-3 col-6 bg-blue">3</div>
             <div class="col-sm-3 offset-md-6 col-6 bg-blue">4</div>
         </div>
-        <div class="row bg-lightblue d-none d-sm-flex d-md-none"> Tablet</div>
+        <div class="row bg-lightblue d-none d-sm-flex d-md-none"><div>Tablet</div></div>
         <div class="row">
           <div class="col-sm-3 col-6 order-md-4 bg-grey" >a</div>
           <div class="col-sm-3 col-6 order-md-3 bg-grey" >b</div>
@@ -30,11 +30,11 @@
         </div>
         <div class="row bg-lightblue d-none d-md-flex "><div>Desktop</div></div>
         <div class="row bg-lightblue d-sm-none d-flex "><div>Mobile</div></div>
-        <div class="row ">
-          <div class="col-6 col-md-3 col d-none d-sm-flex order-sm-2 offset-md-3 bg-orange">:(</div>
-          <div class="col-sm-6 col-md-3 col d-sm-flex order-md-2 bg-orange">:D</div>
-          <div class="col-md-3 col order-3 ghost"></div>
+        <div class="row">
+          <div class="col-sm-6 col-md-3 d-none d-sm-flex align-content-center justify-content-center order-sm-2 offset-md-3 bg-orange">:(</div>
+          <div class="col-sm-6 col-md-3 align-content-center justify-content-center order-md-2 bg-orange">:D</div>
         </div>
+        <div class="row d-sm-flex d-none bg-green"><div>footer</div></div>
     </div>
 
 
