--- a/TE11UD1/TE11UD1.5.html
+++ b/TE11UD1/TE11UD1.5.html
@@ -35,7 +35,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Título</h5>
                             <p class="card-text">
-                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
+                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
                             </p>
                             <a href="#" class="btn btn-primary">Más información.</a>
                         </div>
@@ -47,7 +47,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Título</h5>
                             <p class="card-text">
-                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
+                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
                             </p>
                             <a href="#" class="btn btn-primary">Más información.</a>
                         </div>
@@ -59,7 +59,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Título</h5>
                             <p class="card-text">
-                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
+                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
                             </p>
                             <a href="#" class="btn btn-primary">Más información.</a>
                         </div>
@@ -67,11 +67,11 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="images.jpeg" class="card-img-top" alt="Bootsrap Framework">
+                        <img src="images.jpeg" class="card-img-top" alt="Imagen">
                         <div class="card-body">
                             <h5 class="card-title">Título</h5>
                             <p class="card-text">
-                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
+                                Texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo, texto de ejemplo.
                             </p>
                             <a href="#" class="btn btn-primary">Más información.</a>
                         </div>
